# Principles-and-Techniques-of-Compiler-H

./: README.md
PW1/HW/H1/: answer.md
PW1/HW/H2/: answer.md
PW1/HW/H3/: answer.md
PW1/HW/H3/c/: Makefile  (+1 more)
PW2-1/doc/step1/: answer.md
PW2-1/doc/step3/: answer.md
PW2-1/src/step1/: test1.cpp  test2.cpp
PW2-1/src/step3/: dynamic_cast.cpp  static_cast.cpp  typeid.cpp
PW2-2/src/step1/: answer.md  test1.cpp  test2.cpp
PW2-2/src/step2/: answer.md  test1.cpp
PW3/src/step1/: regular.g4
PW4/c1recognizer/doc/: labAST.md  labLexerParser.md
PW4/c1recognizer/grammar/: C1Lexer.g4  C1Parser.g4
PW4/c1recognizer/src/: recognizer.cpp  syntax_tree_builder.cpp
PW5/: CMakeLists.txt
PW5/doc/: answer.md
PW5/include/: SyntaxTree.h  SyntaxTreeChecker.h  SyntaxTreeSerializer.hpp
PW5/src/: SyntaxTreeChecker.cpp  main.cpp
PW6/: .gitignore  CMakeLists.txt  README.md  sysyf_ref
PW6/Student/task2/: CMakeLists.txt
PW6/Student/task3/: test.py
PW6/doc/: AST.md  SysYFIR.md  phase1.md  phase2.md  phase3.md  prerequisite.md
PW6/include/SysYFIR/: BasicBlock.h  Constant.h  Function.h  GlobalVariable.h  IRPrinter.h  IRStmtBuilder.h  Instruction.h  Module.h  Type.h  User.h  Value.h
PW6/include/SysYFIRBuilder/: IRBuilder.h
PW6/report/: contribution.md  report.md
PW6/src/SysYFIR/: BasicBlock.cpp  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRPrinter.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
PW6/src/SysYFIRBuilder/: IRBuilder.cpp
PW7/: id.txt
PW7/doc/reports/: B1.md  B2.md  B3.md  B4.md  contribution.md
PW7/src/: main.cpp
PW7/test/: test_live_var.py
(+32 files in other folders)
